--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -40,6 +40,10 @@
         @apply bg-blue-mensana focus:outline-none focus:ring-2 focus:ring-blue-mensana focus:ring-offset-2 text-white;
     }
 
+    .nav-wrapper{
+        @apply flex justify-between items-center;
+    }
+
     .nav-wrapper .search-form{
         @apply relative;
     }
@@ -53,7 +57,15 @@
     }
 
     .nav-items .nav-link{
-        @apply font-sans-9pt-regular text-blue-mensana text-lg transition duration-300;
+        @apply relative font-sans-9pt-regular text-blue-mensana text-lg transition duration-300;
+    }
+
+    .nav-items .nav-link::after{
+        @apply block bg-blue-mensana mt-2 w-0 h-1 content-[''] transition duration-300 ease-in-out;
+    }
+
+    .nav-items .nav-link.active::after, .nav-items .nav-link:hover::after{
+        @apply w-full;
     }
 
     .language-switcher{
@@ -103,7 +115,7 @@
     }
 
     .product-service-card{
-        @apply relative bg-gray-100 pl-2 rounded-b-md rounded-tl-md h-[300px] overflow-hidden
+        @apply relative bg-gray-100 pl-2 rounded-2xl h-[300px] overflow-hidden
     }
 
     .product-service-card .badge {
@@ -115,7 +127,7 @@
     }
 
     .featured-products{
-        @apply relative px-5 pt-20 pb-16 border border-gray-500 rounded w-full;
+        @apply relative px-5 pt-20 pb-16 border border-gray-200 rounded-2xl w-full;
     }
 
     .featured-products .badge {
