--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,6 +30,8 @@
     --color-blue-mensana: #0284be;
     --color-cyan-mensana: #03909a;
 
+    --aspect-blog: 12 / 5;
+
 }
 
 @layer components {
@@ -47,7 +49,7 @@
     }
 
     .nav-wrapper.openNav {
-        @apply block;
+        @apply block mt-10;
     }
 
     .nav-wrapper .search-form{
