update from client

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,14 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+
+@font-face {
+    font-family: "DM Sans 9pt";
+    src: url("/fonts/DMSans-Bold.woff") format("woff");
+    font-weight: 700;
+    font-style: normal;
+}
+
 @theme {
     --font-sans: "DM Sans", ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
@@ -55,6 +63,7 @@
         @apply block mt-10;
     }
 
+
     .nav-wrapper .search-form{
         @apply relative w-full lg:w-auto transition-all duration-500 ease-in-out transform;
     }
@@ -72,7 +81,7 @@
     }
 
     .nav-items .nav-link{
-        @apply relative font-sans-9pt-regular font-light lg:font-normal text-blue-mensana text-base lg:text-lg transition duration-300;
+        font-family: "DM Sans 9pt" format("woff");
     }
 
     .nav-items .nav-link::after{
@@ -141,9 +150,10 @@
         @apply z-0 absolute inset-0 w-full h-full object-cover mix-blend-multiply;
     }
 
-    .product-service-card{
-        @apply relative bg-gray-100 pl-2 rounded-2xl h-[200px] lg:h-[300px] overflow-hidden
+    .product-service-card {
+        @apply relative bg-gray-100 pl-2 rounded-2xl h-[200px] lg:h-[300px] overflow-hidden;
     }
+
 
     .product-service-card .badge {
         @apply top-0 right-0 z-20 absolute py-1 lg:py-2.5 rounded-tr-md w-[150px] lg:w-[300px] font-bold text-white text-xl lg:text-4xl text-center;
