--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,14 +8,6 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
-
-@font-face {
-    font-family: "DM Sans 9pt";
-    src: url("/fonts/DMSans-Bold.woff") format("woff");
-    font-weight: 700;
-    font-style: normal;
-}
-
 @theme {
     --font-sans: "DM Sans", ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
@@ -81,7 +73,7 @@
     }
 
     .nav-items .nav-link{
-        font-family: "DM Sans 9pt" format("woff");
+        @apply relative font-sans-9pt-regular font-light lg:font-normal text-blue-mensana text-base lg:text-lg transition duration-300;
     }
 
     .nav-items .nav-link::after{
