--- a/public/fonts/stylesheet.css
+++ b/public/fonts/stylesheet.css
@@ -71,6 +71,33 @@
 }
 
 @font-face {
+    font-family: 'DM Sans';
+    src: url('/fonts/DMSans-Bold.woff2') format('woff2'),
+        url('/fonts/DMSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url('/fonts/DMSans-Light.woff2') format('woff2'),
+        url('/fonts/DMSans-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url('/fonts/DMSans-LightItalic.woff2') format('woff2'),
+        url('/fonts/DMSans-LightItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'Myriad Pro';
     src: url('/fonts/MyriadPro-Regular.woff2') format('woff2'),
         url('/fonts/MyriadPro-Regular.woff') format('woff');
